<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/PreferenceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appearance" />

        <include
            android:id="@+id/View"
            layout="@layout/preference" />

        <include
            android:id="@+id/Theme"
            layout="@layout/preference" />

        <include
            android:id="@+id/DateFormat"
            layout="@layout/preference" />

        <include
            android:id="@+id/TextSize"
            layout="@layout/preference" />


        <include
            android:id="@+id/NotesSortOrder"
            layout="@layout/preference" />

<!--        <include-->
<!--            android:id="@+id/CheckedListItemSorting"-->
<!--            layout="@layout/preference" />-->

        <include
          android:id="@+id/MaxLabels"
          layout="@layout/preference_seekbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/PreferenceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_density" />

        <include
            android:id="@+id/MaxTitle"
            layout="@layout/preference_seekbar" />

        <include
            android:id="@+id/MaxItems"
            layout="@layout/preference_seekbar" />

        <include
            android:id="@+id/MaxLines"
            layout="@layout/preference_seekbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/PreferenceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup" />

        <include
            android:id="@+id/AutoBackup"
            layout="@layout/preference" />

        <include
            android:id="@+id/AutoBackupPeriodDays"
            layout="@layout/preference_seekbar" />

        <include
            android:id="@+id/AutoBackupMax"
            layout="@layout/preference_seekbar" />

        <TextView
            android:id="@+id/ImportBackup"
            style="@style/Preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_backup" />

        <TextView
          android:id="@+id/ImportOther"
          style="@style/Preference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/import_other" />

        <TextView
            android:id="@+id/ExportBackup"
            style="@style/Preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_backup" />

        <TextView
          android:id="@+id/ClearData"
          style="@style/Preference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/clear_data" />


        <include
          android:id="@+id/ExternalDataFolder"
          layout="@layout/preference" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/PreferenceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security" />

        <include
            android:id="@+id/BiometricLock"
            layout="@layout/preference" />

        <include
          android:id="@+id/BackupPassword"
          layout="@layout/preference" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/PreferenceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <TextView
          android:id="@+id/SendFeedback"
          style="@style/Preference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/send_feedback" />

        <TextView
          android:id="@+id/CreateIssue"
          style="@style/Preference"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/create_github_issue" />

        <TextView
            android:id="@+id/SourceCode"
            style="@style/Preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code" />

        <TextView
            android:id="@+id/Libraries"
            style="@style/Preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraries" />

        <TextView
            android:id="@+id/Rate"
            style="@style/Preference"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate" />

        <TextView
          android:id="@+id/VersionText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAppearance="?attr/textAppearanceCaption"
          android:gravity="start"
          android:padding="16dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>